# vscode-python

./: Readme.md  amazon_linux2.sh  pyproject.toml
samples/: create_file.py
